Fix broken menu alignment. BZ #880621

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -4,7 +4,7 @@
 }
 
 body, h1, h2, h3, h4, h5, h6, pre, li, div {
-	line-height: 1em;
+/*	line-height: 1em; */
 }
 
 body {
