--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -1622,7 +1622,7 @@ body.toc_embeded p#title {
 
 
 /*smaller nav for smaller screens */
-@media (max-width: 1020px) {
+@media (max-width: 900px) {
     #menu {font-size:.75em !important;}}
 
 
@@ -1650,7 +1650,7 @@ top: 32px !important;
 
 
 /* shrink the font size of the docunav when viewing on a small screen*/
-@media (max-width: 1020px) {
+@media (max-width: 900px) {
      .docnav , .docnav li.home,  .docnav a strong, #floatingtoc{font-size:.75em !important;}
     }
    
@@ -1661,7 +1661,7 @@ top: 32px !important;
 /*when there is no side nav */
 #floatingtoc .toc { 
         width: 40em !important;
-  left: 50% !important;
+  left: 35% !important;
   margin-left: -20em !important;
   position: absolute !important;
 }
